package edu.fiuba.algo3.modelo.Parcela.Pasarela;

import edu.fiuba.algo3.modelo.Enemigo.Enemigo;
import edu.fiuba.algo3.modelo.Posicion;

public class Largada extends Pasarela {

    public Largada(Posicion posicion) {
        super(posicion);
    }

    @Override
    public void insertarEnemigo(Enemigo unEnemigo) throws Exception {

    }
}
